--- a/笔记.md
+++ b/笔记.md
@@ -14,10 +14,13 @@
 
 
 
-| git status                  | 查看文件处于什么状态                    |
-| --------------------------- | --------------------------------------- |
-| git status -s               | 精简的显示文件状态                      |
-| git add  文件名             | 表示跟踪新文件 （将文件设为已暂存）     |
-| git commit -m "描述消息"    | 提交更新  使被提交的文件处于 Unmodified |
-| git checkout --- index.html | 将仓库中的文件放入 本地                 |
+| git status                      | 查看文件处于什么状态                    |
+| ------------------------------- | --------------------------------------- |
+| git status -s                   | 精简的显示文件状态                      |
+| git add  文件名                 | 表示跟踪新文件 （将文件设为已暂存）     |
+| git commit -m "描述消息"        | 提交更新  使被提交的文件处于 Unmodified |
+| git checkout --- index.html     | 将仓库中的文件放入 本地                 |
+| git reset HEAD 要移除的文件名称 | 从暂存区中移除文件                      |
+| git rm -f index.js              | 从git仓库和工作区中同时移除index.js     |
+| git rm --cached index.css       | 只从git仓库移除  保留工作区中的index    |
 
