--- a/笔记.md
+++ b/笔记.md
@@ -23,4 +23,5 @@
 | git reset HEAD 要移除的文件名称 | 从暂存区中移除文件                      |
 | git rm -f index.js              | 从git仓库和工作区中同时移除index.js     |
 | git rm --cached index.css       | 只从git仓库移除  保留工作区中的index    |
+| git push -u origin "master"     | 将文件 添加到远程仓库中                 |
 
